fix mark text color in dark mode

--- a/styles/global.css
+++ b/styles/global.css
@@ -88,8 +88,7 @@ kbd {
 }
 
 mark {
-  @apply bg-yellow-200;
-  color: inherit;
+  @apply bg-yellow-200 text-gray-800;
 }
 
 [style*='--aspect-ratio'] {
